--- a/css/styles.css
+++ b/css/styles.css
@@ -483,21 +483,20 @@ main {
     .nav-links {
         display: flex;
         position: fixed;
-        top: var(--nav-height);
-        right: -100%;
+        top: -100vh;
+        left: 0;
         width: 100%;
-        height: calc(100vh - var(--nav-height));
+        height: 100vh;
         background-color: var(--bg-secondary);
         flex-direction: column;
         align-items: center;
-        justify-content: flex-start;
-        padding-top: 2rem;
-        transition: right 0.3s ease;
+        justify-content: center;
+        transition: top 0.3s ease;
         z-index: 999;
     }
 
     .nav-links.active {
-        right: 0;
+        top: 0;
     }
 
     .nav-links a {
